switch  to go-chi and add swagger ui
